--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,6 +3,7 @@
  * To adjust anything, simply edit the variables below and rebuild the theme.
  ******************************************************************************/
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 @use "sass:color";
 
 // Colors
